--- a/public/index.html
+++ b/public/index.html
@@ -7,16 +7,21 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Muhammad Abdullah's professional portfolio showcasing skills, projects, and experience in web engineering, software development, and volunteer work in global tech communities like Google for Developers and Microsoft Learn Student Ambassadors."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
+    <meta
+      name="keywords"
+      content="Muhammad Abdullah, portfolio, web engineer, software engineer, software developer, cloud computing, projects, experience, volunteer, tech communities, Google for Developers, Microsoft Learn Student Ambassadors, gold, mlsa, gdsc, react, 
+      javascript, nodejs, expressjs, mongodb, firebase, google cloud, azure, aws, gcp, cloud, web development, software development, programming, coding, tech, technology, computer science, computer engineering, information technology, it, computer
+      "
+    />
+    <meta name="author" content="Muhammad Abdullah" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-
-    <title>React App</title>
+    <title>
+      Muhammad Abdullah | Software Engineer | Mentor | Tech Communities
+    </title>
+    <!-- Bootstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -33,7 +38,25 @@
       href="https://api.fontshare.com/v2/css?f[]=gambetta@401&display=swap"
       rel="stylesheet"
     />
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Person",
+        "name": "Muhammad Abdullah",
+        "jobTitle": "Muhammad Abdullah, , Web Developer, Software Engineer, Mentor",
+        "url": "https://muhammadabdullah.me",
+        "sameAs": [
+          "https://www.linkedin.com/in/muhammadabdullah00/",
+          "https://github.com/muhammadabdullah660",
+          "https://topmate.io/muhammad_abdullah15",
+          "https://linktr.ee/muhammad_abdullah00"
+        ],
+        "description": "Muhammad Abdullah's professional portfolio showcasing skills, projects, and experience in web engineering, software development, and volunteer work in global tech communities like Google for Developers and Microsoft Learn Student Ambassadors.",
+        "image": "https://github.com/muhammadabdullah660/muhammadabdullah/blob/gh-pages/images/Muhammad%20Abdullah.jpg?raw=true"
+      }
+    </script>
   </head>
+
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
