--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,20 @@
     <meta name="author" content="Muhammad Abdullah" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-E47J0B4EQL"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-E47J0B4EQL");
+    </script>
     <title>
       Muhammad Abdullah | Software Engineer | Mentor | Tech Communities
     </title>
